# create-pyloid-app

./: README.md  index.js  package.json
templates/common/: .gitignore  _gitignore  build-windows.spec  build_config.json  requirements.txt
templates/common/default/: README.md  build_config.json  requirements.txt
templates/common/default/src-pyloid/: server.py
templates/common/fastapi/: pyproject.toml  requirements.txt
templates/common/fastapi/src-pyloid/: build.py  main.py  server.py
templates/common/pyloidipc/: README.md.ejs  pyproject.toml
templates/common/pyloidipc/src-pyloid/: ipc.py  main.py
templates/common/pyloidrpc/src-pyloid/: build.py  main.py
templates/common/src-pyloid/: app.py  build.py  main.py  rpc.py
templates/framework/nextjs/javascript/: next.config.mjs  package.json  package.json.ejs
templates/framework/nextjs/typescript/: next.config.ts  package.json  package.json.ejs
templates/framework/react/javascript/: index.html  package.json  package.json.ejs  vite.config.js
templates/framework/react/typescript/: package.json  package.json.ejs  vite.config.ts
templates/framework/svelte/javascript/: package.json  package.json.ejs  vite.config.js
templates/framework/svelte/typescript/: package.json  package.json.ejs  vite.config.ts
templates/framework/sveltekit/javascript/: .gitignore  package.json  package.json.ejs  vite.config.js
templates/framework/sveltekit/typescript/: package.json  package.json.ejs  svelte.config.js
templates/framework/vue/javascript/: package.json  package.json.ejs  vite.config.js
(+35 files in other folders)
