[project]
name = "pyloid-app"
version = "1.0.0"
readme = "README.md"
description = "My first application"

requires-python = ">=3.9"

dependencies = [
    "pyloid",
    "pyloid-adapter",
    "fastapi",
    "uvicorn"
]

[dependency-groups]
dev = [
    "pyloid-builder",
    "pyloid-watcher",
    "ruff",
]
